--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -466,6 +466,30 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   year={2013}
 }
 
+@article{bellemare2015arcade,
+  title={The Arcade Learning Environment: An Evaluation Platform for General Agents (Extended Abstract)},
+  author={Bellemare, Marc G and Naddaf, Yavar and Veness, Joel and Bowling, Michael},
+  journal={In Proceedings of the International Joint Conference on Artificial Intelligence (IJCAI)},
+  pages={4148--4152},
+  year={2015}
+}
+
+@article{machado2018revisiting,
+  title={Revisiting the arcade learning environment: Evaluation protocols and open problems for general agents},
+  author={Machado, Marlos C and Bellemare, Marc G and Talvitie, Erik and Veness, Joel and Hausknecht, Matthew and Bowling, Michael},
+  journal={Journal of Artificial Intelligence Research},
+  volume={61},
+  pages={523--562},
+  year={2018}
+}
+
+@inproceedings{yang2015proceedings,
+  title={Proceedings of the Twenty-Fourth International Joint Conference on Artificial Intelligence, IJCAI 2015, Buenos Aires, Argentina, 25-31 July 2015},
+  author={Yang, Qiang and Wooldridge, Michael},
+  booktitle={Proceedings of the Twenty-Fourth International Joint Conference on Artificial Intelligence, IJCAI 2015, Buenos Aires, Argentina, 25-31 July 2015},
+  year={2015}
+}
+
 @article{risi2020chess,
   title={From Chess and Atari to StarCraft and Beyond: How Game AI is Driving the World of AI},
   author={Risi, Sebastian and Preuss, Mike},
@@ -475,13 +499,6 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   pages={7--17},
   year={2020},
   publisher={Springer}
-}
-
-@inproceedings{yang2015proceedings,
-  title={Proceedings of the Twenty-Fourth International Joint Conference on Artificial Intelligence, IJCAI 2015, Buenos Aires, Argentina, 25-31 July 2015},
-  author={Yang, Qiang and Wooldridge, Michael},
-  booktitle={Proceedings of the Twenty-Fourth International Joint Conference on Artificial Intelligence, IJCAI 2015, Buenos Aires, Argentina, 25-31 July 2015},
-  year={2015}
 }
 
 @article{badia2020agent57,
@@ -498,3 +515,116 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   year={2018}
 }
 
+@article{tesauro1995temporal,
+  title={Temporal difference learning and TD-Gammon},
+  author={Tesauro, Gerald},
+  journal={Communications of the ACM},
+  volume={38},
+  number={3},
+  pages={58--68},
+  year={1995}
+}
+
+@article{moravvcik2017deepstack,
+  title={Deepstack: Expert-level artificial intelligence in heads-up no-limit poker},
+  author={Morav{\v{c}}{\'i}k, Matej and Schmid, Martin and Burch, Neil and Lis{\`{y}}, Viliam and Morrill, Dustin and Bard, Nolan and Davis, Trevor and Waugh, Kevin and Johanson, Michael and Bowling, Michael},
+  journal={Science},
+  volume={356},
+  number={6337},
+  pages={508--513},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{jaderberg2019human,
+  title={Human-level performance in 3D multiplayer games with population-based reinforcement learning},
+  author={Jaderberg, Max and Czarnecki, Wojciech M and Dunning, Iain and Marris, Luke and Lever, Guy and Castaneda, Antonio Garcia and Beattie, Charles and Rabinowitz, Neil C and Morcos, Ari S and Ruderman, Avraham and others},
+  journal={Science},
+  volume={364},
+  number={6443},
+  pages={859--865},
+  year={2019},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{silver2016mastering,
+  title={Mastering the game of Go with deep neural networks and tree search},
+  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+  journal={nature},
+  volume={529},
+  number={7587},
+  pages={484--489},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{silver2018general,
+  title={A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+  author={Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and others},
+  journal={Science},
+  volume={362},
+  number={6419},
+  pages={1140--1144},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{hooker1995testing,
+  title={Testing heuristics: We have it all wrong},
+  author={Hooker, John N},
+  journal={Journal of heuristics},
+  volume={1},
+  number={1},
+  pages={33--42},
+  year={1995},
+  publisher={Springer}
+}
+
+@book{stanley2015greatness,
+  title={Why greatness cannot be planned: The myth of the objective},
+  author={Stanley, Kenneth O and Lehman, Joel},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{deng2009imagenet,
+  title={Imagenet: A large-scale hierarchical image database},
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  booktitle={2009 IEEE conference on computer vision and pattern recognition},
+  pages={248--255},
+  year={2009},
+  organization={Ieee}
+}
+
+@article{russakovsky2015imagenet,
+  title={Imagenet large scale visual recognition challenge},
+  author={Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and others},
+  journal={International journal of computer vision},
+  volume={115},
+  number={3},
+  pages={211--252},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{todorov2012mujoco,
+  title={Mujoco: A physics engine for model-based control},
+  author={Todorov, Emanuel and Erez, Tom and Tassa, Yuval},
+  booktitle={2012 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  pages={5026--5033},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{lanctot2019openspiel,
+  title={OpenSpiel: A framework for reinforcement learning in games},
+  author={Lanctot, Marc and Lockhart, Edward and Lespiau, Jean-Baptiste and Zambaldi, Vinicius and Upadhyay, Satyaki and P{\'e}rolat, Julien and Srinivasan, Sriram and Timbers, Finbarr and Tuyls, Karl and Omidshafiei, Shayegan and others},
+  journal={arXiv preprint arXiv:1908.09453},
+  year={2019}
+}
+
+@misc{mitchell2005computation,
+  title={Computation in Cellular Automata: A Selected Review},
+  author={Mitchell, Melanie and others},
+  year={2005}
+}
