--- a/THESIS/05-conclusion.Rmd
+++ b/THESIS/05-conclusion.Rmd
@@ -1,13 +1,9 @@
 # Conclusion
 
-## Summary
+In this document we have explored the advantages of using Cellular Automata as Reinforcement Learning environments. In particular a novel task has been proposed. It consists of an agent navigating through a forest fire CA with the goal of reducing the extension and amount of fire cells. The task has the semantics of an "Helicopter" trying to extinguish a wild fire. The optimization problem was put in terms of the Reinforcement Learning paradigm and then tried to be solved with the Deep Q-Networks algorithm.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non enim id arcu hendrerit pulvinar. Suspendisse vehicula nibh sed leo porttitor cursus. Cras vel quam interdum, suscipit tortor in, tempus ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec dictum velit non sapien vestibulum efficitur finibus ac ipsum. Proin eget diam condimentum, aliquam orci vel, auctor sapien. Nulla ac magna suscipit, tincidunt mi a, gravida quam. Proin eros leo, dapibus id luctus at, interdum et nunc. Morbi dapibus dictum ex ut volutpat. Donec consectetur eget urna facilisis hendrerit. Ut sodales cursus magna. Vivamus ipsum ipsum, congue vitae maximus eu, pellentesque vel erat.
+Our results suggest that CA can successfully be used as RL environments. Furthermore we believe that CA could be a promising benchmark for RL due to their simple formulation yet they are capable of modeling complex systems and have interesting computing characteristics. Consequently CA based environments might be closer to real applications than current video game based benchmarks.
 
-## Conclusions
+Future work would include extending the grid size, as for now our results are very preliminary on a $3 \times 3$ grid. Further characterization of our proposed environment still remains, as only one algorithm was applied, so a natural step is to try other families of RL methods, like policy gradients and comparisons to other RL complementary methodologies such as _searching_ and _planning_ would be necessary.
 
-Lack of variaty of benchmark bias algorithms.
-
-## Future Work
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non enim id arcu hendrerit pulvinar. Suspendisse vehicula nibh sed leo porttitor cursus. Cras vel quam interdum, suscipit tortor in, tempus ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec dictum velit non sapien vestibulum efficitur finibus ac ipsum. Proin eget diam condimentum, aliquam orci vel, auctor sapien. Nulla ac magna suscipit, tincidunt mi a, gravida quam. Proin eros leo, dapibus id luctus at, interdum et nunc. Morbi dapibus dictum ex ut volutpat. Donec consectetur eget urna facilisis hendrerit. Ut sodales cursus magna. Vivamus ipsum ipsum, congue vitae maximus eu, pellentesque vel erat.
+Encouraging a CA based RL benchmark must involve featuring a broad number of interesting tasks, as this was one of the key factors for the success of ALE. Modifications on the parameters of our proposed environment would change the semantics of our task. For example changing the effects of the agent to transform tree cells to empty cells or to rock cells would modify the semantics to one of a "builder" or "worker" trying to extinguish the fire be means of barriers or calculated tree cut downs. This task could be translated to an algorithmic context of finding cuts on graph, represented by the forest structure, that minimize the spread of a controlled initial fire. In addition completely new and relevant tasks could be proposed from the CA literature.
